--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "deploy": "sh deploy.sh",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
